improvement of search engine

--- a/force-app/main/default/lwc/employeeSearchFilter/employeeSearchFilter.html
+++ b/force-app/main/default/lwc/employeeSearchFilter/employeeSearchFilter.html
@@ -10,13 +10,13 @@
             <lightning-combobox
                 value={selectedEmployeeDepartment}
                 options={departmentsOptionsArray}
-                onchange={handleDepartmentOptionsChange}
+                onchange={handleOptionsChange}
                 label="Department"
             ></lightning-combobox>
             <lightning-combobox
                 value={selectedEmployeePosition}
                 options={positionsOptionsArray}
-                onchange={handlePositionOptionsChange}
+                onchange={handleOptionsChange}
                 label="Position"
             ></lightning-combobox>
         </div>
