pagination records send to modal

--- a/force-app/main/default/lwc/employeeModal/employeeModal.html
+++ b/force-app/main/default/lwc/employeeModal/employeeModal.html
@@ -3,7 +3,7 @@
     <lightning-modal-body>
         <c-custom-data-types
             key-field="Id"
-            data={selectedRecords}
+            data={selectedEmployees}
             columns={columns}
         ></c-custom-data-types>  
     </lightning-modal-body>
