--- a/force-app/main/default/lwc/employeeSearchResults/employeeSearchResults.html
+++ b/force-app/main/default/lwc/employeeSearchResults/employeeSearchResults.html
@@ -35,14 +35,14 @@
                     label="前へ" 
                     icon-name="utility:chevronleft" 
                     icon-position="left"
-                    onclick={goToPreviousPage}>
+                    onclick={handlePrevious}>
                 </lightning-button>
                 <span class="slds-var-m-around_small">{currentPage}/{totalPages}</span>
                 <lightning-button 
                     label="次へ" 
                     icon-name="utility:chevronright" 
                     icon-position="right"
-                    onclick={goToNextPage}>
+                    onclick={handleNext}>
                 </lightning-button>
             </div> 
              
